<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSignup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.menu.SignUpFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="242dp"
        android:layout_height="212dp"
        android:background="@drawable/image_background"
        android:contentDescription="@string/imgLogo"
        android:scaleType="centerCrop"
        app:layoutDescription="@string/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/daily_care_logo" />

    <EditText
        android:id="@+id/txtFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/firstNamelHint"
        android:hint="@string/firstNamelHint"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="@string/txtEmail"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/lastNamelHint"
        android:hint="@string/lastNamelHint"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:text="@string/txtLastName"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtFirstName" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/emailHint"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/txtEmail"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtLastName" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/passwordHint"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text="@string/txtPassword"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <EditText
        android:id="@+id/txtConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints="@string/confirmPasswordHint"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text="@string/txtConfirmPassword"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/navy_blue"
        android:enabled="true"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingRight="30dp"
        android:paddingBottom="5dp"
        android:text="@string/btnSignup"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primary_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>