<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentSignin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    tools:context=".ui.menu.SignInFragment">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="271dp"
        android:layout_height="231dp"
        android:background="@drawable/image_background"
        android:contentDescription="@string/imgLogo"
        android:scaleType="centerCrop"
        app:layoutDescription="@string/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/daily_care_logo" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/emailHint"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        android:text="@string/txtEmail"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:autofillHints="@string/passwordHint"
        android:hint="@string/passwordHint"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:text="@string/txtPassword"
        android:textColor="@color/navy_blue"
        android:textColorHint="@color/navy_blue"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <Button
        android:id="@+id/btnSignin"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/navy_blue"
        android:enabled="true"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:paddingRight="30dp"
        android:paddingBottom="5dp"
        android:text="@string/btnSignin"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/primary_white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchSavePwd" />

    <TextView
        android:id="@+id/lbl_ask_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="24dp"
        android:text="@string/lblAskToSignUp"
        android:textAlignment="center"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <Button
        android:id="@+id/btn_ask_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/navy_blue"
        android:enabled="true"
        android:text="@string/btnRequestSignup"
        android:textAlignment="gravity"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/primary_white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toEndOf="@+id/lbl_ask_register"
        app:layout_constraintTop_toBottomOf="@+id/btnSignin" />

    <Switch
        android:id="@+id/switchSavePwd"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/switchSavePwd"
        android:textColor="@color/navy_blue"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>