<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dailycareai.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_checkup"
        android:name="com.example.dailycareai.ui.checkup.AICamera"
        android:label="@string/title_checkup"
        tools:layout="@layout/fragment_checkup_aicamera"></fragment>

    <fragment
        android:id="@+id/navigation_health_checks"
        android:name="com.example.dailycareai.ui.healthchecks.HealthChecksFragment"
        android:label="@string/title_healthchecks"
        tools:layout="@layout/fragment_health_checks" >
    </fragment>
    <fragment
        android:id="@+id/signInFragment"
        android:name="com.example.dailycareai.ui.menu.SignInFragment"
        android:label="fragment_sign_in"
        tools:layout="@layout/fragment_sign_in" />
    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.example.dailycareai.ui.menu.SignUpFragment"
        android:label="fragment_sign_up"
        tools:layout="@layout/fragment_sign_up" />
    <fragment
        android:id="@+id/navigation_video_analysis"
        android:name="com.example.dailycareai.ui.videoanalysis.VideoAnalysis"
        android:label="@string/title_video_analysis"
        tools:layout="@layout/fragment_video_analysis" />

</navigation>