<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/imgRecAvatar"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/imgAvatar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/daily_care_logo_min" />

    <TextView
        android:id="@+id/lblResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="sans-serif"
        android:text="@string/lblResult"
        android:textColor="@color/navy_blue"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imgRecAvatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtResult"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toEndOf="@+id/lblResult"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtCardDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/txtDate"
        android:textColor="@color/navy_blue"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Switch
        android:id="@+id/switchHeadPosition"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:enabled="false"
        android:text="@string/swtHeadPosition"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toEndOf="@+id/imgRecAvatar"
        app:layout_constraintTop_toBottomOf="@+id/lblResult" />

    <Switch
        android:id="@+id/switchBlinking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:enabled="false"
        android:text="@string/swtBlinking"
        android:textColor="@color/navy_blue"
        app:layout_constraintStart_toEndOf="@+id/imgRecAvatar"
        app:layout_constraintTop_toBottomOf="@+id/switchHeadPosition" />

    <Switch
        android:id="@+id/switchSmiling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:text="@string/txtCardSmiling"
        android:textColor="@color/navy_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgRecAvatar"
        app:layout_constraintTop_toBottomOf="@+id/switchBlinking" />
</androidx.constraintlayout.widget.ConstraintLayout>