<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_white"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ImageView
        android:id="@+id/imgHomeLogo"
        android:layout_width="271dp"
        android:layout_height="231dp"
        android:background="@drawable/image_background"
        android:contentDescription="@string/imgLogo"
        android:scaleType="centerCrop"
        android:src="@drawable/daily_care_logo"
        app:layoutDescription="@string/imgAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDiagnostic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/primary_white"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toTopOf="@+id/scrollViewText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgHomeLogo">

        <ImageView
            android:id="@+id/imgAvatarR"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:contentDescription="@string/imgAvatar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/daily_care_logo_min" />

        <TextView
            android:id="@+id/txtDiagnostic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            android:text="@string/txtDiagnostic"
            android:textColor="@color/navy_blue"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/imgAvatarR"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/scrollViewText"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutDiagnostic">

        <TextView
            android:id="@+id/txtDiagnosticReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtDiagDetail"
            android:textColor="@color/navy_blue"
            android:textSize="16sp" />
    </ScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        android:padding="20dp"
        app:cardBackgroundColor="@color/primary_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgAvatar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="10dp"
                android:contentDescription="@string/imgAvatar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/daily_care_logo_min" />

            <TextView
                android:id="@+id/txtDailyCareAi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textAlignment="textStart"
                android:gravity="start"
                android:layout_gravity="start"
                android:layout_weight="1"
                android:text="@string/txtDailyCareAi"
                android:textColor="@color/navy_blue"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imgAvatar"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>